@startuml
!theme plain
hide circle
hide methods
skinparam linetype ortho

entity "ApplicationUser" as Users {
  *Id : int
  --
  Email : nvarchar(256)
  UserName : nvarchar(256)
  FirstName : nvarchar(128)
  LastName : nvarchar(128)
  PasswordHash : nvarchar(max)
  PhoneNumber : nvarchar(32)
  IsEmailConfirmed : bit
  CreatedAtUtc : datetime2
  UpdatedAtUtc : datetime2
}

entity "Role" as Roles {
  *Id : int
  --
  Name : nvarchar(64)
  NormalizedName : nvarchar(64)
}

entity "UserRole" as UserRoles {
  *UserId : int
  *RoleId : int
}

entity "Garage" as Garages {
  *Id : int
  --
  OwnerReference : int <<nullable>>
  Name : nvarchar(128)
  Address : nvarchar(256)
  TimeZone : nvarchar(64)
  CreatedAtUtc : datetime2
}

entity "GarageAccess" as GarageAccess {
  *Id : int
  --
  GarageId : int
  UserId : int
  AccessLevel : varchar(32) <<Owner|Family|Guest|B2B>>
  ExpiresAtUtc : datetime2 <<nullable>>
  CreatedAtUtc : datetime2
}

entity "AccessKey" as AccessKeys {
  *Id : bigint
  --
  GarageId : int
  IssuedByUserId : int
  KeyType : varchar(32) <<Family|Guest>>
  Token : varchar(256)
  ExpiresAtUtc : datetime2 <<nullable>>
  Status : varchar(32) <<Active|Revoked|Expired>>
  CreatedAtUtc : datetime2
}

entity "IoTDevice" as Devices {
  *Id : int
  --
  GarageId : int
  SerialNumber : varchar(64)
  DeviceType : varchar(32) <<GateCtrl|SensorHub>>
  FirmwareVersion : varchar(32)
  LastHeartbeatUtc : datetime2
  Status : varchar(32) <<Online|Offline>>
}

entity "GateEvent" as GateEvents {
  *Id : bigint
  --
  GarageId : int
  InitiatorUserId : int <<nullable>>
  TriggerSource : varchar(32) <<Owner|Family|Guest|Auto|B2B>>
  Action : varchar(16) <<Open|Close|Stop>>
  Result : varchar(32) <<Success|Failed>>
  CreatedAtUtc : datetime2
}

entity "SensorReading" as SensorReadings {
  *Id : bigint
  --
  DeviceId : int
  SensorType : varchar(16) <<CO|Smoke|Temp|Humidity>>
  Value : decimal(10,2)
  Unit : varchar(8)
  RecordedAtUtc : datetime2
}

entity "RefreshToken" as RefreshTokens {
  *Id : bigint
  --
  UserId : int
  Token : varchar(256)
  ExpiresOnUtc : datetime2
  CreatedAtUtc : datetime2
}

Users ||--o{ UserRoles : "assigned to"
Roles ||--o{ UserRoles : "contains"

Users ||--o{ GarageAccess : "obtains"
Garages ||--o{ GarageAccess : "grants"

Users ||--o{ AccessKeys : "issues"
Garages ||--o{ AccessKeys : "for"

Garages ||--o{ Devices : "hosts"
Devices ||--o{ SensorReadings : "emits"

Garages ||--o{ GateEvents : "records"
Users ||--o{ GateEvents : "initiates"

Users ||--o{ RefreshTokens : "owns"

Garages ||..o{ AccessKeys : "allows guest entry"
AccessKeys ||--o{ GateEvents : "logged via"

@enduml

